--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <a href="index.html">Home</a>
       </li>
       <li>
-        <a href="aboutus.html">About Us</a>
+        <a href="whatsneeded.html">whatsneeded</a>
       </li>
       <li>
-        <a href="help.html">How you Can Help</a>
+        <a href="getinvolved.html">getinvolved</a>
       </li>
     </ul>
   </nav>
