--- a/index.html
+++ b/index.html
@@ -1,39 +1,74 @@
-<html>
- <head>
-   <title>Save the penguins</title>
-   <link href="index.css" type="text/css" rel="stylesheet">
- </head>
+<!DOCTYPE html>
+  <head>
+    <title>Seattle Parks for Kids</title>
+    <link href="index.css" type="text/css" rel="stylesheet">
+  </head>
 
-<body>
-  <header>
-    <h1>Save the penguins</h1>
-  </header>
-  <nav>
-    <ul>
-      <li>
-        <a href="index.html">Home</a>
-      </li>
-      <li>
-        <a href="whatsneeded.html">whatsneeded</a>
-      </li>
-      <li>
-        <a href="getinvolved.html">getinvolved</a>
-      </li>
-    </ul>
-  </nav>
-  <section>
-    <h2>All About Penguins</h2>
-    <article>
-     <h3>What's happening to penguins?</h3>
-      <p><a href="https://en.wikipedia.org/wiki/Penguin" target="_blank">penguins</a> are particularly vulnerable to climate change. The antactic peninsula is warming faster than almost any where on earth. When is rains, penguin chicks die.</p>
-      <img src="/img/1.jpg">
-    </article>
-  </section>
-  <aside>
-  </aside>
-  <footer>
-  </footer>
-  Hello World!
-</body>
+  <body>
+    <header>
+      <h1>Seattle Parks for Kids</h1>
+    </header>
+    <nav>
+      <ul>
+        <li>
+          <a href="index.html">About</a>
+        </li>
+        <li>
+          <a href="whatsneeded.html">What's Needed</a>
+        </li>
+        <li>
+          <a href="getinvolved.html">Get Involved</a>
+        </li>
+      </ul>
+    </nav>
+    <section>
+      <h2>About Seattle Parks for Kids</h2>
+      <article>
+        <img src="2016-05-29 13.32.32.jpg" class="spiffyimg">
+
+        <p>Seattle Parks for Kids is an organization dedicated to improving the quality of city parks. Many city parks are in great need of maintenance, cleanup, and safety improvements.
+        </p>
+
+        <p>
+        We need parks to be a place for the entire populace of Seattle to gather, mingle, and interact to foster a safer and environment for all.
+        </p>
+
+      <h3>Why is this Needed?</h3>
+          <p>Children need clean, safe, and interesting parks in which to grow and develop. Our community needs a place to gather and interact. Children need clean, safe, and interesting parks in which to grow and develop. Our community needs a place to gather and interact.
+          </p>
+
+          <p>
+          We need parks to be a place for the entire populace of Seattle to gather, mingle, and interact to foster a safer and environment for all.We need parks to be a place for the entire populace of Seattle to gather, mingle, and interact to foster a safer and environment for all.
+          </p>
+
+      <h3>What Can We Accomplish?</h3>
+
+      <img src="download.jpg" class="spiffyimg">
+
+      <p>Adding toys, new playground equipment, cleaning up rubbish, planting trees, and more! Children need clean, safe, and interesting parks in which to grow and develop. Our community needs a place to gather and interact.
+      </p>
+
+      <p>Adding toys, new playground equipment, cleaning up rubbish, planting trees, and more! Children need clean, safe, and interesting parks in which to grow and develop. Our community needs a place to gather and interact.
+      </p>
+
+      <p>Adding toys, new playground equipment, cleaning up rubbish, planting trees, and more! Children need clean, safe, and interesting parks in which to grow and develop. Our community needs a place to gather and interact.
+      </p>
+
+      </article>
+    </section>
+    <aside>
+    </aside>
+
+    <footer>
+      <ul>
+        <li>
+          <a href="http://www.seattle.gov/parks">Resources</a>
+        </li>
+        <li>
+          Copyright 2016 CF101
+        </li>
+      </ul>
+    </footer>
+  </body>
 
 </html>
